Reconfiguração do arquivo de conexão, estilização das página com inclusão de overflow e background e fixação da sidebar, alteração na configuração do arquivo sql

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -11,12 +11,26 @@
     font-family: "Poppins", sans-serif;
 }
 
+.main-content{
+    height: calc(100vh - 50px);
+    background-color: #dadddb;
+}
+
+.content{
+    height: 100%;
+    background-color: #f6f6f6;
+    overflow-y: auto;
+}
+
 .sidebar {
-    height: 100vh;
+    height: 100%;
     background-color: #1a281f;
     width: 240px; /* Largura inicial */
     transition: width 0.1s ease-in-out; /* Adicionando a transição para a largura */
-    overflow-x: hidden; /* Oculta o conteúdo que ultrapassa a largura */
+    z-index: 1;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
 }
 
 h1{
